--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&family=Work+Sans:wght@400;500;600;700;800;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
 </head>
 
 <body>
@@ -33,6 +34,8 @@
         </div>
     </header>
     <!-- HEADER -->
+
+
     <!-- HERO -->
     <main id="bello">
         <section class="hero">
@@ -53,6 +56,8 @@
             </div>
         </section>
         <!-- HERO -->
+
+
         <!-- SECURE -->
         <section class="secure">
             <div class="secure__container container">
@@ -82,6 +87,8 @@
             </div>
         </section>
         <!-- SECURE -->
+
+
         <!-- TECHNOLOGY -->
         <section class="technology">
             <div class="technology__container container">
@@ -116,6 +123,8 @@
                 <img class="umbrella" src="./images/umbrella.png" alt="">
         </section>
         <!-- TECHNOLOGY -->
+
+
         <!-- SAFE_HANDS -->
         <section class="safe-hands">
             <div class="container">
@@ -131,7 +140,7 @@
             </div>
             <div class="quality-assurance">
                 <div class="container">
-                    <div class="quality-assurance__row">
+                    <div class="quality-assurance__row grid__col-4">
                         <div class="quality-assurance__card">
                             <div class="quality-assurance__card-img">
                                 <img src="./images/quality1.png" alt="">
@@ -165,14 +174,64 @@
             </div>
         </section>
         <!-- SAFE_HANDS -->
+
+        <!-- INSURANCE -->
         <section class="insurance">
             <div class="container">
                 <div class="insurance__info content__info">
                     <h5 class="insurance__info-suptitle content__info-suptitle">How it works</h5>
                     <h2 class="insurance__info-title content__info-title">Affordable life insurance in minutes</h2>
                     <p class="insurance__info-subtitle content__info-subtitle">We use technology to save you time and
-                        money
-                        – no pushy sales agents, paperwork, or extra fees. Just a few clicks and you’re done.</p>
+                        money – no pushy sales agents, paperwork, or extra fees. Just a few clicks and you’re done.
+                    </p>
+                    <div class="insurance__pay grid__col-4">
+                        <img class="drop_1" src="./images/drop.png" alt="">
+                        <img class="drop_2" src="./images/drop.png" alt="">
+                        <img class="dash-img" src="./images/dash.png" alt="">
+                        <img class="confetti" src="./images/confetti.png" alt="">
+                        <div class="insurance__pay-step">
+                            <div class="insurance__pay-step-dot">
+                                <img src="./images/Rectangle.png" alt="">
+                            </div>
+                            <div class="insurance__pay-step-number">
+                                <img src="./images/1.png" alt="">
+                            </div>
+                            <h3 class="insurance__pay-step-title">
+                                Get My Price
+                            </h3>
+                            <div class="insurance__pay-step-desc">
+                                Choose the amount that you would like to be covered for and we’ll give you a quote.
+                            </div>
+                        </div>
+                        <div class="insurance__pay-step">
+                            <div class="insurance__pay-step-dot">
+                                <img src="./images/Rectangle.png" alt="">
+                            </div>
+                            <div class="insurance__pay-step-number">
+                                <img src="./images/2.png" alt="">
+                            </div>
+                            <h3 class="insurance__pay-step-title">
+                                Apply
+                            </h3>
+                            <div class="insurance__pay-step-desc">
+                                Answer a few questions and get your final price.
+                            </div>
+                        </div>
+                        <div class="insurance__pay-step">
+                            <div class="insurance__pay-step-dot">
+                                <img src="./images/Rectangle.png" alt="">
+                            </div>
+                            <div class="insurance__pay-step-number">
+                                <img src="./images/3.png" alt="">
+                            </div>
+                            <h3 class="insurance__pay-step-title">
+                                You’re Covered
+                            </h3>
+                            <div class="insurance__pay-step-desc">
+                                Congratulations on securing your loved ones financial future!
+                            </div>
+                        </div>
+                    </div>
                     <button class="filled-btn btn">
                         Get my price
                         <svg width="30" height="11" viewBox="0 0 30 11" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -184,9 +243,11 @@
                 </div>
             </div>
         </section>
+        <!-- INSURANCE -->
+
+
         <!-- EVERYTHING -->
         <section class="everything">
-
             <div class="everything__container container">
                 <div class="everything__content content">
                     <div class="everything__img-desc content__img-desc">
@@ -197,7 +258,7 @@
                             <img src="./images/image2.png" alt="">
                         </div>
                         <div class="everything__img-badge">
-                            There's also human help 👋
+                            Nerd out in our Learning Center 🤓
                         </div>
                     </div>
                     <div class="everything__info content__info">
@@ -208,7 +269,7 @@
                             helpful tools, from the Bello team. Learn about life insurance, finances, health and
                             wellness.
                         </p>
-                        <a href="" class="everything__info-link content__info-link">Visit Learning Center
+                        <a href="#" class="everything__info-link content__info-link">Visit Learning Center
                             <svg width="30" height="11" viewBox="0 0 30 11" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -220,6 +281,8 @@
                 </div>
         </section>
         <!-- EVERYTHING -->
+
+
         <!-- POSIBILITIES -->
         <section class="posibilities">
             <div class="container">
@@ -284,14 +347,22 @@
             </div>
         </section>
         <!-- POSIBILITIES -->
+
+
         <!-- GET-STARTED -->
         <section class="get-started">
             <div class="container">
                 <div class="get-started__content">
-                    <img src="./images/umbrella-man.png" alt="">
+                    <div class="umbrella-man">
+                        <img src="./images/umbrella-man.png" alt="">
+                    </div>
                     <h2 class="get-started__title">Get Started Today.</h2>
                     <p class="get-started__info">Join the Bello community of people who are securing their financial
-                        future.</p>
+                        future.
+                    </p>
+                    <div class="boy">
+                        <img src="./images/boy.png" alt="">
+                    </div>
                     <button class="filled-btn btn">
                         Get my price
                         <svg width="30" height="11" viewBox="0 0 30 11" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -303,11 +374,84 @@
                 </div>
             </div>
         </section>
-    <!-- GET-STARTED -->
+        <!-- GET-STARTED -->
     </main>
-    <footer class="footer">
 
+    <!-- FOOTER -->
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__content">
+                <div class="footer__company">
+                    <a href="" class="logo">
+                        <img src="./images/logo.svg" alt="">
+                    </a>
+                    <p class="footer__company-info">Bello is a trading name of Bello Insurance Services LLC. Bello
+                        policies are
+                        issued by [Insert Underwriter here].</p>
+                    <input class="footer__company-input" type="text" name="" id="">
+                    <button class="footer__company-btn">Go
+                        <svg width="22" height="16" viewBox="0 0 22 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M21.4922 10.1489C21.4144 9.26102 21.4183 8.0625 21.2349 7.21211C21.1167 6.69071 20.8112 6.51746 20.6053 6.23843C20.2819 5.86028 19.9525 5.41383 19.6291 5.03568C18.4118 3.5664 17.1945 2.09712 15.9771 0.627839C16.1007 0.795257 16.1147 2.19868 16.1387 2.47187C16.1626 2.74506 16.1767 4.14848 16.3002 4.3159C16.9118 5.08468 17.5527 5.77268 18.1644 6.54147C12.1608 6.77105 6.122 7.01311 0.124405 7.31098C0.194791 7.286 0.335897 10.9682 0.441476 10.9307C5.89921 10.6836 11.3921 10.4241 16.8911 10.2328C16.2051 10.6875 15.496 11.2913 14.8692 12.0067C14.7696 12.1125 14.9297 13.112 15.0427 13.9874C15.0906 14.5337 15.1384 15.0801 15.1863 15.6265C15.2859 15.5207 15.4207 15.4025 15.5203 15.2967C15.5203 15.2967 15.5555 15.2842 15.5495 15.2159C16.6099 14.0649 17.7885 13.4353 18.9671 12.8057C19.6238 12.4318 20.2865 12.1261 20.9312 11.6156C21.3064 11.3416 21.4764 11.2108 21.5049 10.7078C21.5109 10.7761 21.546 10.7636 21.552 10.8319C21.5401 10.6953 21.5281 10.5587 21.5161 10.4221C21.5101 10.3538 21.4982 10.2172 21.4922 10.1489ZM19.8286 8.55632C19.7934 8.56881 19.7934 8.56881 19.7582 8.5813C19.7523 8.513 19.7463 8.44471 19.7463 8.44471C19.7463 8.44471 19.7875 8.50051 19.8286 8.55632Z"
+                                fill="white" />
+                        </svg>
+                    </button>
+                    <div class="footer_social-links">
+                        <a href=""><i class="fab fa-facebook-f"></i></a>
+                        <a href=""><i class="fab fa-instagram"></i></a>
+                        <a href=""><i class="fab fa-youtube"></i></a>
+                        <a href=""><i class="fab fa-linkedin"></i></a>
+                        <a href=""><i class="fab fa-tiktok"></i></a>
+                    </div>
+                </div>
+                <div class="footer__links">
+                    <div class="footer__links-grid grid__col-compnay">
+                        <div class="footer_link-column">
+                            <h4 class="footter_links-title">Resources</h4>
+                            <div class="footer__link-items">
+                                <a href="" class="footer__link-item">Term life insurance plans</a>
+                                <a href="" class="footer__link-item">Insurance calculator</a>
+                                <a href="" class="footer__link-item">Guide to life insurance</a>
+                                <a href="" class="footer__link-item">Contact</a>
+                                <a href="" class="footer__link-item">FAQs</a>
+                            </div>
+                        </div>
+                        <div class="footer_link-column">
+                            <h4 class="footter_links-title">Magazine</h4>
+                            <div class="footer__link-items">
+                                <a href="" class="footer__link-item">Insurance</a>
+                                <a href="" class="footer__link-item">Finances</a>
+                                <a href="" class="footer__link-item">Health</a>
+                                <a href="" class="footer__link-item">Updates</a>
+                            </div>
+                        </div>
+                        <div class="footer_link-column">
+                            <h4 class="footter_links-title">More</h4>
+                            <div class="footer__link-items">
+                                <a href="" class="footer__link-item">Claims</a>
+                                <a href="" class="footer__link-item">Terms</a>
+                                <a href="" class="footer__link-item">Privacy</a>
+                                <a href="" class="footer__link-item">Licenses</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </footer>
+    <!-- FOOTER -->
+
+    <!-- COPYRIGHT -->
+    <section class="copyright">
+        <div class="container">
+            <div class="copyright__content">
+                <p>© 2020 Bello insurance Services LLC. All right reserved.</p>
+                <button class="footer_btn btn">Get my price</button>
+            </div>
+        </div>
+    </section>
+    <!-- COPYRIGHT -->
+
 </body>
 
 </html>
