--- a/index.html
+++ b/index.html
@@ -191,9 +191,9 @@
                         <img class="confetti" src="./images/confetti.png" alt="">
                         <div class="insurance__pay-step">
                             <div class="insurance__pay-step-dot">
-                                <img src="./images/Rectangle.png" alt="">
+                                <img class="first-step-dot" src="./images/Rectangle.png" alt="">
                             </div>
-                            <div class="insurance__pay-step-number">
+                            <div class="insurance__pay-step-number first-num">
                                 <img src="./images/1.png" alt="">
                             </div>
                             <h3 class="insurance__pay-step-title">
@@ -205,9 +205,9 @@
                         </div>
                         <div class="insurance__pay-step">
                             <div class="insurance__pay-step-dot">
-                                <img src="./images/Rectangle.png" alt="">
+                                <img class="second-step-dot" src="./images/Rectangle.png" alt="">
                             </div>
-                            <div class="insurance__pay-step-number">
+                            <div class="insurance__pay-step-number second-num">
                                 <img src="./images/2.png" alt="">
                             </div>
                             <h3 class="insurance__pay-step-title">
@@ -219,9 +219,9 @@
                         </div>
                         <div class="insurance__pay-step">
                             <div class="insurance__pay-step-dot">
-                                <img src="./images/Rectangle.png" alt="">
+                                <img class="third-step-dot" src="./images/Rectangle.png" alt="">
                             </div>
-                            <div class="insurance__pay-step-number">
+                            <div class="insurance__pay-step-number third-num">
                                 <img src="./images/3.png" alt="">
                             </div>
                             <h3 class="insurance__pay-step-title">
